--- a/3/index.html
+++ b/3/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Dashboard Covid 19 Indonesia. Data kasus per provinsi dan informasi lainnya terkait penanganan Covid 19">
     
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="pertemuan3-dashboard-covid-19.css">
+    <link rel="stylesheet" href="dashboard-covid-19.css">
     
   </head>
   <body>
